# Sample-Physics-NCERT-RAG

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  local.yaml
data/vector_store/: index.faiss  metadata.jsonl
scripts/: streamlit_app.py
src/physics_book_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/physics_rag/: __init__.py  chat.py  config.py  ingestion.py  llm.py  retrieval.py  utils.py
